2002-08-23  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/bnf.txt :
	* main/epilog.c :
	* parser/parser.h :
	* parser/parser.y :

	  - Moved list initialisation from main file to parser. Made
	    dummy rules at the beginning and end to initialise and
	    destroy lists.

	* Makefile :

	  - Top level makefile now cleans all dirs even without the debug
	    variable defined.

	* datastruct/Makefile :
	* exp/Makefile :
	* ident/Makefile :
	* main/Makefile :
	* parser/Makefile :
	* test/Makefile :

	  - When the debug symbol is defined, -O2 will not be included in
	    CFLAGS. Also -g will be included to allow actual debugging.

	* docs/bnf.txt :
	* parser/parser.y :

	  - Again separated expressions into ground_exp and comp_exp.
	    This allows the parser to accept variables and have strict
	    identifier checking.

	* docs/sample :

	  - Enabled transformation statements.

2002-08-22  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/simplelist.c :

	  - Some cleanup.

	* exp/expression.c :
	* ident/identlist.c :

	  - Fixed bug in purge functions. Purge will now always delete the
	    first element until the list is empty.

	* parser/parser.y :

	  - Cleanups and simplifications.

2002-08-19  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* datastruct/Makefile :
	* datastruct/index.h :
	* exp/Makefile :
	* ident/Makefile :
	* ident/identlist.c :
	* ident/identlist.h :
	* main/Makefile :
	* main/epilog.c :
	* parser/Makefile :
	* parser/parser.h :
	* parser/parser.y :

	  - Fixes for strict prototypes.

	* exp/atom.c :

	  - Fixed macros. They return non-zero if true.

	* exp/expression.c :
	* exp/expression.h :

	  - Added wrapper functions length and get.

	* main/epilog.c :
	* parser/parser.h :
	* parser/parser.y :

	  - Added yywarn.

	  - Expressions declared using the initially statement are now
	    stored correctly into an initial state expression.

	* Makefile :

	  - Added exp directory.

	* exp/Makefile :

	  - Added expression.
